// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Details /> with initial props 1`] = `
.c2 {
  padding: 0 20px;
}

.c6 {
  fill: #A2A4AD;
}

.c3 {
  font-weight: 700;
  color: #242529;
  margin-bottom: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 20px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 28px;
  height: 28px;
  border-radius: 50%;
  background-color: #F5F5F5;
}

.c0 {
  display: inline-block;
  background: transparent;
  padding: 0;
  border: 0;
  outline: 0;
  width: 100%;
  -webkit-text-align: left;
  text-align: left;
}

.c0:hover .c4 {
  background-color: rgba(36,37,41,0.1);
  color: #9497a1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
  padding-top: 20px;
  padding-bottom: 20px;
}

.c7 {
  display: none;
}

@media (min-width:569px) {
  .c2 {
    padding: 0 25px;
  }
}

@media (min-width:569px) {
  .c3 {
    font-size: 20px;
    line-height: 22px;
  }
}

@media (min-width:569px) {
  .c1 {
    padding-top: 25px;
    padding-bottom: 25px;
  }
}

@media (min-width:769px) {
  .c1 {
    padding-top: 30px;
    padding-bottom: 30px;
  }
}

<div>
  <button
    className="c0"
    onClick={[Function]}
  >
    <div
      className="c1 c2"
    >
      <h3
        className="c3"
        id={undefined}
      >
        Lorem ipsum dolor sit amet
      </h3>
      <div
        className="c4 c5"
      >
        <svg
          className="c6"
          color="grey"
          height={18}
          viewBox="0 0 18 18"
          width={18}
        >
          <path
            d="M14.7 5.8L9 11.4 3.3 5.8 1.9 7.2l7.1 7 7.1-7z"
          />
        </svg>
      </div>
    </div>
  </button>
  <div
    className="c7"
    open={false}
  >
    <div
      className="c2"
    >
      Et aeterno impedit accusamus nec. Ne porro altera recusabo eum, eos ad
movet mentitum, id malorum expetenda ius. Nec illud melius repudiandae
et. Quas prima congue vis ne, erat malorum detraxit in nam. Regione
iuvaret consulatu duo cu.
    </div>
  </div>
</div>
`;

exports[`<Details /> with openInitially prop 1`] = `
.c2 {
  padding: 0 20px;
}

.c6 {
  fill: #A2A4AD;
}

.c3 {
  font-weight: 700;
  color: #242529;
  margin-bottom: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 20px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 28px;
  height: 28px;
  border-radius: 50%;
  background-color: #F5F5F5;
}

.c0 {
  display: inline-block;
  background: transparent;
  padding: 0;
  border: 0;
  outline: 0;
  width: 100%;
  -webkit-text-align: left;
  text-align: left;
}

.c0:hover .c4 {
  background-color: rgba(36,37,41,0.1);
  color: #9497a1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
  padding-top: 20px;
  padding-bottom: 20px;
}

.c7 {
  display: block;
}

@media (min-width:569px) {
  .c2 {
    padding: 0 25px;
  }
}

@media (min-width:569px) {
  .c3 {
    font-size: 20px;
    line-height: 22px;
  }
}

@media (min-width:569px) {
  .c1 {
    padding-top: 25px;
    padding-bottom: 25px;
  }
}

@media (min-width:769px) {
  .c1 {
    padding-top: 30px;
    padding-bottom: 30px;
  }
}

<div>
  <button
    className="c0"
    onClick={[Function]}
  >
    <div
      className="c1 c2"
    >
      <h3
        className="c3"
        id={undefined}
      >
        Lorem ipsum dolor sit amet
      </h3>
      <div
        className="c4 c5"
      >
        <svg
          className="c6"
          color="grey"
          height={18}
          viewBox="0 0 18 18"
          width={18}
        >
          <path
            d="M3.3 13.2L9 7.6l5.7 5.6 1.4-1.4-7.1-7-7.1 7z"
          />
        </svg>
      </div>
    </div>
  </button>
  <div
    className="c7"
    open={true}
  >
    <div
      className="c2"
    >
      Et aeterno impedit accusamus nec. Ne porro altera recusabo eum, eos ad
movet mentitum, id malorum expetenda ius. Nec illud melius repudiandae
et. Quas prima congue vis ne, erat malorum detraxit in nam. Regione
iuvaret consulatu duo cu.
    </div>
  </div>
</div>
`;
